--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
 node_js:
 - stable
-after_success: "bash ./deploy.sh"
+after_success: bash ./deploy.sh
 env:
   global:
   - COMMIT_AUTHOR_EMAIL: ''
+before_install:
+- openssl aes-256-cbc -K $encrypted_180766a5519e_key -iv $encrypted_180766a5519e_iv
+  -in deploy_key.enc -out deploy_key -d
