--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 script: bash ./deploy.sh
 env:
   global:
-  - COMMIT_AUTHOR_EMAIL: ''
+  - COMMIT_AUTHOR_EMAIL: 'pexigras@aol.com'
 before_install:
 - openssl aes-256-cbc -K $encrypted_180766a5519e_key -iv $encrypted_180766a5519e_iv
   -in deploy_key.enc -out deploy_key -d
